tests/sum-types/ill-typed/bad-sum-types-5.stella
language core;
extend with #sum-types;

fn g(x : Nat + Bool) -> Nat {
  return match x {
      inl(n) => succ(n)
    | inr(bf) => false
  }
}

fn main(x : Nat) -> Nat {
  return g(inr(false))
}
